--- a/no-framework/index.html
+++ b/no-framework/index.html
@@ -17,10 +17,9 @@
         <div class="container is-full is-centered is-flex">
             <!-- Logo / add website link when hosted -->
             <div class="navbar-brand is-centered">
-                <a class="navbar-item" href="https://bulma.io">
+                <a class="navbar-item" href="/index.html">
 
-                    <img src="https://bulma.io/images/bulma-logo-white.png"
-                        alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+                    <img src="DevnessLogo1x1.png"  width="50" height="250">
 
                 </a>
                 <div class="navbar-burger" data-target="navMenuColorprimary-example">
@@ -47,31 +46,39 @@
                             Admin
                         </a>
                             <div class="navbar-dropdown">
-                                <a class="navbar-item" href="https://bulma.io/documentation/overview/start/">
-                                    Overview
+                                <a class="navbar-item" href="#Admin/Users">
+                                    Users
                                 </a>
                             </div>
                     </div>
 
                 </div>
+
                 <div class="navbar-end">
                     <div class="navbar-item">
+
+                         
                         <div class="field is-grouped">
+                            <button class="button is-primary ">
+                                <a class="button is-primary" href="#Sign Up">
+                                    Sign Up
+                                </a>
+                            </button>
                             <div class="navbar-item has-dropdown is-hoverable">
                                 <a class="navbar-link" href="#Login">
                                     Login
                                 </a>
                                     <div class="navbar-dropdown">
-                                        <a class="navbar-item" href="https://bulma.io/documentation/overview/start/">
-                                            Overview
+                                        <a class="navbar-item" href="User1">
+                                            User1
                                         </a>
                                         
-                                        <a class="navbar-item" href="https://bulma.io/documentation/overview/start/">
-                                            Overview
+                                        <a class="navbar-item" href="User2">
+                                            User2
                                         </a>
 
-                                        <a class="navbar-item" href="https://bulma.io/documentation/overview/start/">
-                                            Overview
+                                        <a class="navbar-item" href="#User3">
+                                            User3
                                         </a>
                                     </div>
                             </div>
