--- a/no-framework/index.html
+++ b/no-framework/index.html
@@ -11,28 +11,30 @@
 </head>
 
 <body>
+    <div id="app">
     <!-- Bulma Navbar "Burger" -->
     <nav class="navbar is-primary is-flex" role="navigation" aria-label="main navigation">
 
-        <div class="container is-full is-centered is-flex">
+        <div class="container is-full is-centered">
             <!-- Logo / add website link when hosted -->
             <div class="navbar-brand is-centered">
-                <a class="navbar-item" href="/index.html">
+                <a class="navbar-item" href="/no-framework">
                     <img src="DevnessLogo1x1.png" width="50" height="250">
                 </a>
-                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                </a>
+
+                <div class="navbar-burger" @click="isMenuActive = !isMenuActive" :class="{ 'is-active': isMenuActive }" data-target="navMenu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
 
             </div>
 
 
 
-            <div id="navMenu" class="navbar-menu is-mobile">
+            <div id="navMenu" class="navbar-menu is-mobile"  :class="{ 'is-active': isMenuActive }">
                 <div class="navbar-start ">
-                    <a class="navbar-item" href="#MY ACTIVITY">
+                    <a class="navbar-item" href="#MyActivity">
                         My Activity
                     </a>
                     <a class="navbar-item" href="#FriendActivity">
@@ -57,31 +59,27 @@
 
                 <div class="navbar-end">
                     <div class="navbar-item">
-
-
-                        <div class="field is-grouped">
-                            <button class="button is-primary ">
-                                <a class="button is-primary" href="#Sign Up">
-                                    Sign Up
+                        <button class="button is-primary ">
+                            <a class="button is-primary" href="#Sign Up">
+                                Sign Up
+                            </a>
+                        </button>
+                        <div class="navbar-item has-dropdown is-hoverable">
+                            <a class="navbar-link" href="#Login">
+                                Login
+                            </a>
+                            <div class="navbar-dropdown">
+                                <a class="navbar-item" href="#User1">
+                                    User1
                                 </a>
-                            </button>
-                            <div class="navbar-item has-dropdown is-hoverable">
-                                <a class="navbar-link" href="#Login">
-                                    Login
+
+                                <a class="navbar-item" href="#User2">
+                                    User2
                                 </a>
-                                <div class="navbar-dropdown">
-                                    <a class="navbar-item" href="#User1">
-                                        User1
-                                    </a>
 
-                                    <a class="navbar-item" href="#User2">
-                                        User2
-                                    </a>
-
-                                    <a class="navbar-item" href="#User3">
-                                        User3
-                                    </a>
-                                </div>
+                                <a class="navbar-item" href="#User3">
+                                    User3
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -89,6 +87,20 @@
             </div>
         </div>
     </nav>
+</div>  
+    <script type="module">
+        import { createApp, ref } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
+    
+        createApp({
+          setup() {
+            const showAlert = ref (true)
+            const isMenuActive = ref(false)
+            return {
+            showAlert, isMenuActive
+            }
+          }
+        }).mount('#app')
+      </script>
 
 
 </body>
